<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/green"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:src="@mipmap/logo_company"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="0"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/green"
                android:paddingLeft="5dp"
                android:text="D-Mobile"
                android:textColor="#a7ffeb"
                android:textSize="@dimen/text_size_normal"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/btnClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="0"
                android:text="ลบข้อมูล"
                android:textColor="#006064" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvCustName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/green"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_medium"
            android:textStyle="bold" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#df005662"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/layoutBtnSms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageButton
                    android:id="@+id/btnMenuSms"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/icon_button_sms" />

                <TextView
                    android:id="@+id/tvMenuSms"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/menu_button_sms"
                    android:textColor="#80cbc4"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:id="@+id/vMenuSelectedSms"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="1dp"
                android:layout_weight="0"
                android:background="@color/white"
                android:visibility="gone"/>
        </LinearLayout>

        <View
            android:id="@+id/vDividerSms"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:id="@+id/layoutBtnContract"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageButton
                    android:id="@+id/btnMenuContract"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/icon_button_contract" />

                <TextView
                    android:id="@+id/tvMenuContract"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/menu_button_contract"
                    android:textColor="#80cbc4"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:id="@+id/vMenuSelectedContract"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="1dp"
                android:layout_weight="0"
                android:background="@color/white"
                android:visibility="gone"/>
        </LinearLayout>

        <View
            android:id="@+id/vDividerContract"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorAccent"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:visibility="gone"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="10dp">

                <ImageButton
                    android:id="@+id/btnMenuExit"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:background="@null"
                    android:scaleType="fitCenter"
                    android:src="@mipmap/icon_button_exit" />

                <TextView
                    android:id="@+id/tvMenuExit"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="5dp"
                    android:gravity="center"
                    android:text="@string/menu_button_exit"
                    android:textColor="#80cbc4"
                    android:textSize="@dimen/text_size_small"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:id="@+id/vMenuSelectedExit"
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:layout_margin="1dp"
                android:layout_weight="0"
                android:background="@color/white"
                android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>



    <FrameLayout
        android:id="@+id/contentContrainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" />

</LinearLayout>